crates/swc_ecma_parser/tests/errors/missing_paren_while/input.js
while true {
    console.log("test");
}
